--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,8 +1,5 @@
-fastapi==0.109.0
-uvicorn[standard]==0.27.0
-sqlalchemy==2.0.25
-psycopg2-binary==2.9.9
-python-jose[cryptography]==3.3.0
-passlib[bcrypt]==1.7.4
-python-multipart==0.0.6
-pydantic==2.5.3
+fastapi==0.115.0
+uvicorn==0.30.0
+httpx==0.27.0
+beautifulsoup4==4.12.3
+duckduckgo-search==6.3.7
